# ChangeLog for www-apps/drupal
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/drupal/ChangeLog,v 1.100 2013/12/01 22:53:59 jmbsvicetto Exp $

*drupal-6.29 (01 Dec 2013)

  01 Dec 2013; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +drupal-6.29.ebuild:
  Version bump to 6.29 - bug 491858.

*drupal-7.24 (29 Nov 2013)

  29 Nov 2013; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +drupal-7.24.ebuild, drupal-7.23.ebuild:
  Bump drupal to the 7.24 release - fixes bug 491858. Adjust php deps - bug
  479830.

*drupal-7.23 (13 Sep 2013)

  13 Sep 2013; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +drupal-7.23.ebuild, metadata.xml:
  Bump drupal to release 7.23. Make dependency on accelerator and uploadprogress
  optional. Fixes bugs: 416897, 443736 and 475584.

  06 Apr 2013; Tim Harder <radhermit@gentoo.org> -drupal-7.20.ebuild,
  -drupal-7.21.ebuild:
  Remove old.

*drupal-7.22 (06 Apr 2013)

  06 Apr 2013; Tim Harder <radhermit@gentoo.org> +drupal-7.22.ebuild:
  Version bump.

*drupal-7.21 (07 Mar 2013)

  07 Mar 2013; Tim Harder <radhermit@gentoo.org> +drupal-7.21.ebuild:
  Version bump.

*drupal-7.20 (24 Feb 2013)

  24 Feb 2013; Tim Harder <radhermit@gentoo.org> -drupal-7.19.ebuild,
  +drupal-7.20.ebuild:
  Security bump and remove old (bug #459078).

  17 Jan 2013; Tim Harder <radhermit@gentoo.org> -drupal-6.27.ebuild,
  -drupal-7.18.ebuild:
  Remove insecure versions.

*drupal-7.19 (17 Jan 2013)
*drupal-6.28 (17 Jan 2013)

  17 Jan 2013; Tim Harder <radhermit@gentoo.org> +drupal-6.28.ebuild,
  +drupal-7.19.ebuild:
  Version bumps to fix security issue.

  13 Jan 2013; Tim Harder <radhermit@gentoo.org> -drupal-6.26.ebuild,
  -drupal-7.16.ebuild, -drupal-7.17.ebuild:
  Remove insecure versions.

*drupal-7.18 (13 Jan 2013)
*drupal-6.27 (13 Jan 2013)

  13 Jan 2013; Tim Harder <radhermit@gentoo.org> +drupal-6.27.ebuild,
  +drupal-7.18.ebuild: