@@ -1,0 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST dontstarve_x32_1383879308.tar.gz 169762365 SHA256 2347ec3b1d13b41f2718363e4ef9dca93b9072a3b17b077f5f44a1f78eda3ee5 SHA512 1781eed2f4e0d4f68540caf2fc7393afae314b7a36168bb97f5fcc773b57814f16066fba92a7bc71acdc6d5b3bcc3907044bccbcb3bf9e71d64fcce921b798f5 WHIRLPOOL a18be28fe415c16ab5b12b5ce12a0fcd0de4f6e4bbe0e8b27485cdf865d1c5f30c2ff522832d90ed4e9b1cf75bfb9beecd36c67c0db16f66c1ec4697c59a3f27
+DIST dontstarve_x64_1383879308.tar.gz 170340937 SHA256 257c02143d6c43a128cd4f2d28ee66fd9ea7206dc616a2185af218d35fe6cb0f SHA512 d9032495ec1b8769c9e7e0cd148c8f721772e5957add763d4f3b7fa42ac5d7c946e5f2e4234862f562a5e80fe5c3f98c9d64addc36ba389473f3269bcb98a40f WHIRLPOOL 897fcaf6e63283dbb045b3e39322cb85f26ceaacd73ade1c50c5f4f34e821b9152f82fffb9728bd9f6404d4ccf6ab8fb8a0050792424397761aedb7e5640da57
+EBUILD dont-starve-1.ebuild 1531 SHA256 a75694c76a5847dddcd9c47ae52b3b88a05fcea78a56965280dd1968ae375761 SHA512 320e223950084d05afc5a0e6de62a8f0294bac00baa2c0386a6c1c30b98197e4de5e1b1cc8e933cd11b876fee745ef5781b200864003f429c867ed3d7a7d637a WHIRLPOOL 9a018a699111acbcc566c5644f2ea52bd242164030ca840b9ff84e5b5227c8526d4837623f9a71c102997d73683da60cc788ba68ae300f76df2b582c0208a08a
+MISC ChangeLog 449 SHA256 498d7c40f910a03d6263f7671e91104cb924e90a3de73978e7a569d6e61a6786 SHA512 a20a91aed04db85c29ccbf6bdd713e1d6fc00ab5821770ce1e7125d8fec055f8369cbce36947b8d5ffdadd330261327be4c0805eb8531a178f2cd3970a9a07e1 WHIRLPOOL 63f7fc239f432c7110b3983919fc9f6401477160c5631bb030a5b27a6a747a10b148b93c0485b62abcb72748af7f8a1bcdf43f8bb0d19a7a59fb655c67f56e64
+MISC metadata.xml 254 SHA256 42d769831f9be3fb5b0972b75bc3b1e4765416161881d7303cb637abbe03d6dd SHA512 2a78f67329bbc7aab1b971330a49fe7a0812e95f8775a91e6b97d4751b8b6fd92510ecf1bee9bd43dfb376cb0a71830a74e2b9f9212168168a2a7e22b223ae31 WHIRLPOOL 3d71526e2e1ce18ca62385c234302e0694490b40f263e456ff4166e1156279c97e3b58fb4b1959c69ce01d96bc9e1e9eda57e9f596a6155e53bb3f1f496be71e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQEcBAEBCAAGBQJSm8F+AAoJEFpvPKfnPDWzv4sIAJFMnafwrc1L4Qxy3+1WgObQ
+7Tyg0BIBH/ZVEBUB0D5f4URELgZKgBo0GjUkVMz1ASXMKGpxqR7ZaQb2qs5AS6ZS
+ojv5d7GgufVFsVbw7vn5uwkZ/WvAaxxk7aOscUoCNbQ7gbZE3uR5gOijMPnh/Tu+
+TsJX7Rr2nOFOOqBNoMRTTnJlgobwhBSLZxxhjwDCY5KqIw9tJsKaGq0+6HUi2XGP
+3XiuzTxQyhsoOGK8DNhADfqIWvojZC3eqzFcLGxByBwXnAAZXCbFyAE3VjRMLrhJ
+JJov/sZQjC8Y42om7hbxCxxCRQm1jZE/F4UlTLIu6wuD/ZxqlWyrF5ZORAdKBV0=
+=y1MO
+-----END PGP SIGNATURE-----
