@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install nofetch postinst preinst prepare setup unpack
+DESCRIPTION=Wilderness survival game full of science and magic
+EAPI=5
+HOMEPAGE=http://www.dontstarvegame.com/
+KEYWORDS=~amd64 ~x86
+LICENSE=all-rights-reserved
+RDEPEND=net-misc/curl virtual/opengl
+RESTRICT=fetch bindist splitdebug
+SLOT=0
+SRC_URI=amd64? ( dontstarve_x64_1383879308.tar.gz ) x86? ( dontstarve_x32_1383879308.tar.gz )
+_eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	4878e7f88afc0ba0866ac112190b0fd4	games	0fb7637597e0869f6c8be79b11d0135a	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=2de7fa6f0e4086e308ce69a8493ea93b
