@@ -1,14 +1,0 @@
-DEFINED_PHASES=install postinst prerm setup
-DEPEND=|| ( virtual/httpd-cgi virtual/httpd-fastcgi ) >=app-admin/webapp-config-1.50.15
-DESCRIPTION=PHP-based open-source platform and content management system
-EAPI=5
-HOMEPAGE=http://drupal.org/
-IUSE=+mysql postgres sqlite vhosts
-KEYWORDS=~alpha ~amd64 ~ppc ~x86
-LICENSE=GPL-2
-RDEPEND=virtual/httpd-php dev-lang/php[gd,pdo,postgres?,xml] dev-php/pecl-apc dev-php/pecl-uploadprogress mysql? ( || ( dev-lang/php[mysql] dev-lang/php[mysqli] ) ) sqlite? ( || ( dev-lang/php[sqlite] dev-lang/php[sqlite3] ) ) >=app-admin/webapp-config-1.50.15
-REQUIRED_USE=|| ( mysql postgres sqlite )
-SLOT=7.22
-SRC_URI=http://drupal.org/files/projects/drupal-7.22.tar.gz
-_eclasses_=webapp	25b9b1696f5e698711f47d45c3d45e3e
-_md5_=ab6acbd5fbd05b468b7adf4c8e58e9b8
