@@ -1,14 +1,0 @@
-DEFINED_PHASES=install postinst prerm setup
-DEPEND=|| ( virtual/httpd-cgi virtual/httpd-fastcgi ) >=app-admin/webapp-config-1.50.15
-DESCRIPTION=PHP-based open-source platform and content management system
-EAPI=5
-HOMEPAGE=http://drupal.org/
-IUSE=+accelerator +mysql postgres sqlite +uploadprogress vhosts
-KEYWORDS=~alpha ~amd64 ~ppc ~x86
-LICENSE=GPL-2
-RDEPEND=dev-lang/php[gd,hash,pdo,postgres?,simplexml,xml] virtual/httpd-php accelerator? ( || ( ( <dev-lang/php-5.5 dev-php/pecl-apc ) dev-php/xcache dev-php/eaccelerator ( >=dev-lang/php-5.5[opcache] dev-php/pecl-apcu ) ) ) uploadprogress? ( dev-php/pecl-uploadprogress ) mysql? ( || ( dev-lang/php[mysql] dev-lang/php[mysqli] ) ) sqlite? ( || ( dev-lang/php[sqlite] dev-lang/php[sqlite3] ) ) >=app-admin/webapp-config-1.50.15
-REQUIRED_USE=|| ( mysql postgres sqlite )
-SLOT=7.23
-SRC_URI=http://drupal.org/files/projects/drupal-7.23.tar.gz
-_eclasses_=webapp	25b9b1696f5e698711f47d45c3d45e3e
-_md5_=b1e1479d29d44b3db361a24192772bba
