@@ -1,13 +1,9 @@
 AUX postinstall-en.txt 830 SHA256 ff1b9004e65d7a46a7d94b23e2ea90563d5703f2afb45b9dec6ff7e750e788dc SHA512 1d753f23faead95249d2a691da4187c7882400b308fbd2ab1c9b55ca109deb0f7f3e9414a9e6b59a74341706bc6d698745aecc38283c02e9daea555b9bc04bfc WHIRLPOOL 27c73d7dd50391fc2305ee08c138c316fea6b56458c375c317a455fd8ea43e32542a015c4911c48a93d912e1a875490e8d6523de312349c6d5d33506c68a661a
 DIST drupal-6.28.tar.gz 1105942 SHA256 0f92b1863860535877d3a4547dd1481d0fbc76959cc7042d6c4b2b81209a987f SHA512 d385ab4cbde7428cbaba2a9f77183267da29f54086b0203c680b7f8e2329871d24a0e917bd08fcbd311a8ba33e7c7d76b28ff2c01b5de41cf3ff65dda5406ba3 WHIRLPOOL 64398fd93de54c765a105b22d0bd9364122423436c010420e9d93860daeafc728a5728c6e2fdf40f0d3a783748be74ccd48477ba8a04a373a7bd568199d0aaa9
 DIST drupal-6.29.tar.gz 1101032 SHA256 49c17082e78ecd37eb218812d3e4d679b61ec24297c5ee079a206cdc6f45b2db SHA512 fed7465d3d18af3d1b8db3d909fc17f402f45ea6cff323ab6acdcc3846d7e9e4422aa5f78f0ca99f059c77743ea3261956d2eed1176001e97a2fdb3192cdec71 WHIRLPOOL ce141b280708c47ed17672921de1f6c0290c27684695a49eebcf27ec4de21808b2460e165c56cf8fdfd832fe954247c346b8fe9450119f00da5878e1f78277eb
-DIST drupal-7.22.tar.gz 3183014 SHA256 3f64ccfbb1c62bdef870207aa5de84ad11da1c8a94800fce5ad3a484b47cb29b SHA512 70d441b6d3dba456de3be12accaf1297b648c80efb35108823e553e7afc4dd1a9dd29b5d726f0ded5f2ebf7271294e0792043e4259e317cba2376733348966a9 WHIRLPOOL 7dfb69c33d3f2bf92546e569ccf21b4fa02860efd0b6fc33a62aae688f31240d64f26cfb324558bd527bd469a23355a67264923e0244f8d1319f1057b3185ee7
-DIST drupal-7.23.tar.gz 3191695 SHA256 79f2ae06aac349b86fc0f6cd100f3fc34b72e9f46068ddf704d575778aae1f99 SHA512 e5f1b8a79de2fc02c3dfa15345800d369db4bc9e80333410a7ea3e97f680c2478633ac094a709a2b5a6a9f6b65ff7a142ff5d12e9b6085141684f0b1cad2507f WHIRLPOOL 874ea3457d3bd9f4ee262d98ff364a471aa1cd1d0a1e94db60213aec6360aabbf0bd38f71562335c2f91df03c8a8d3707a5fbd475506e62de5162277d46a6b65
 DIST drupal-7.24.tar.gz 3195735 SHA256 5ce593bc86f48bb1923f9256de86c47162c54ba578e4ebe9211690b7349d5c40 SHA512 87b30a4c37c1ba451b9d6321351c60880d800a3ade796fc6038d67186c356ec241e0bc34aeaaebfd7524d6df4950495b1d24c2d81a21f1afff9760f5f8aef7a6 WHIRLPOOL d5747262dfbcdf24bfb48db1ad8b989d4dad3c017ae757ddbe261bd58157dc41d0c04e31c8e61c4f49a38ba87ad1716c3fe206461c5d28078dae3ce6b3d3abbd
 EBUILD drupal-6.28.ebuild 1577 SHA256 86153bba08a3c7afa928afd05cb8248e8591c612400df04b024aa5cdef8f4ef9 SHA512 a946123f98782430a72bbb8e616c419f1b7ae9d165acd15dd7e055a11613ec7bcf1b1e630fb88e585216cdddc477ad68bfb67b24735de15ff62c61f1829bd0ee WHIRLPOOL 788afd8f71481259d3af5e944e012e1cf09debfaa383f3e96f3e04dcea6082625d1aee8188be1851cd0b5dd556ad5cb203542d10cfac9fa661cfe047b99d1829
 EBUILD drupal-6.29.ebuild 1579 SHA256 789eb3d393dba86cef3f5705daf67d85019b0a4e18f1d98875a3bd71dcdae16a SHA512 c2019929cf9769ba800f4c772e176bb006dabdc00f9a648f2564fc13e3913c86d1da71710385edc89c7741ab654563eaeec730cec3baf20bb45a9cc32a6c2b0b WHIRLPOOL 51899afcd9cda7fb023e6a964093f520f0f9a4fa2e641a281fcad278887a2e64e8c0dfc334e2a076601227df6e18f823d4f052011c8b5e4d2539160c4fcd5221
-EBUILD drupal-7.22.ebuild 1720 SHA256 0e0db0947c33a7aee6d9e254c8402cbb93d83a0db1841959e4b104a338cd0acc SHA512 c0bc794595e0ab83267417f59e6b9af5e87ebd43374a51215ebc4598b25d2243abf1d6383a5bd4f2cf52807b174d40800efba0c51d5557e7299e78c2f503282d WHIRLPOOL 5e1c30654a5b9b56af04502c5f63b680c8012197ebb38426450dfaed7da666ef5376ec22d881d2b6a0c7adeef2dbd2ac72c576b44fba525d048b8d94026e4ce7
-EBUILD drupal-7.23.ebuild 1982 SHA256 9e5c0461f716f77db2c2ec6f80b132cff14e94d345731021d2417d076768ee4a SHA512 fb85eddd209a2109f96242e2734165ba1edf8a8bdeba42992ea7665c60a1a153e2e363dbb3c050d9027c7430ffe331cc89063fe155e8768ab9a72b245c2a7b07 WHIRLPOOL e5912e9604aa21ea73e1e2dc3c667b364e4223432d7a15bf52ad016f15a558c0e69d9967b65bb8a0c0d2b809bb55f610b3d70da5ff73af3f9a3722698f3a19ae
 EBUILD drupal-7.24.ebuild 1982 SHA256 6085aa26c72fbc83d4d18e47f9070964db04181e6264b88a8f59f6176030d795 SHA512 43bf9e9cc05c3ab62da82ade9576e08979540e658df69ff07d95b12d16e2d8378ef1e5c0ec883a300240bd8ee4e77e123e2720621b989a0b35a3d4c0d12717d5 WHIRLPOOL 729a2efd16940d8b57918a25ef53b176fb018b4e49da4ad12db131b0aa23d503fd222b45f32dcd2faa287a7ca2bfdb3479c1ba9e6c2f52fb76c5893653bd3c5c
-MISC ChangeLog 15932 SHA256 09f215b3f5451c753b09a162e5996a8d80d268d3f297ebe77d38aafe377ca7e1 SHA512 909193b7c27051bd7c07b9baef388d1b27a3f6e4b2c6e02cf534f8e7265f55bdd823b54211988aa3d6de0bb583c3cbca140d2e85afdf1aaf1d466ab73893fb02 WHIRLPOOL 271ca1c17b8ebdacc9984d185a34aa7a73eafff1dec1d042b9543c3aab8833ba8e05d6bc96ea22a721b144945e6d30fdfca83455f81d59177462f562571846f4
+MISC ChangeLog 16085 SHA256 22ab1ea4435d553d95e7a09612055bd40633ff57ea605ec7a1dc9e12ab680eb0 SHA512 b2b0ef60a6a9d278a0d98a9b56fb27d6f943bf7482d5b88a2110f7b22106b26012fb0661ea047f9dc86964fa3cda000d80517d1df08482e437f3971979ae18fc WHIRLPOOL a962133732557351b724d9d009746fc4df263722d869148e2203cb8bcf1c81de42de006a80dc9906bc3d617fbd78b2a7bd88bafa70039b48e81a56dc3f6517fe
 MISC metadata.xml 334 SHA256 b1d825183ede1df66432e5d9cbc1f0f227d4c238ae1262c3cf492810d3ba5ce2 SHA512 1579decab2343f47cc16d738f45e6152b4f8567f6e0f53e05c587c126d1c05c94ecbbb1bc9aaaf6885bdb53b3bccedc0f63d125e3c245465c24a12a216bd4730 WHIRLPOOL a6446b0fcf9824990c48b511889a402e39f3edd5d9d7d8c58d574abd5435db1b5b4006407340589073e79f50a85d55c90ce1059a2944566cfe9901607adfecae
