@@ -1,0 +1,12 @@
+# ChangeLog for games-misc/dont-starve
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-misc/dont-starve/ChangeLog,v 1.2 2013/12/01 23:08:40 hasufell Exp $
+
+  01 Dec 2013; Julian Ospald <hasufell@gentoo.org> dont-starve-1.ebuild:
+  fix QA_PREBUILT
+
+*dont-starve-1 (01 Dec 2013)
+
+  01 Dec 2013; Julian Ospald <hasufell@gentoo.org> +dont-starve-1.ebuild,
+  +metadata.xml:
+  initial import
